--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
                     <a href="#our-team" class="dropdown-item">OUR TEAM</a>
                   </li>
                   <li>
-                    <a href="#news" class="dropdown-item">NEWS</a>
+                    <a href="#" class="dropdown-item">NEWS</a>
                   </li>
                   <li>
                     <a href="#" class="dropdown-item">INVESTORS</a>
@@ -133,108 +133,110 @@
             </div>
         </div>
       </div>
-      <div class="banner-container d-flex justify-content-center align-items-center py-5">
-        <div class="inner-banner-contanier  d-flex justify-content-center align-items-center"></div>
-            <div class="row d-flex justify-content-center align-items-center col-9">
-                <div class="col-lg-6 col-md-12 col-sm-12 col-12 d-flex justify-content-center align-items-center">
-                    <div class="image-contanier d-flex justify-content-start align-items-center">
-                        <img src="./assets/man-image.png">
-                    </div>                
-                </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 col-12 my-md-4 my-sm-4 my-4 d-flex justify-content-center align-items-center">
-                    <div>
-                        <h4>Lorem ipsum dolor sit amet.</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id quo temporibus recusandae inventore possimus nesciunt aut nihil excepturi natus earum facilis unde, saepe accusamus hic cupiditate quas, maiores nemo debitis porro quis sequi suscipit harum expedita. Nulla sequi voluptatem nostrum doloremque eum consequuntur harum praesentium dignissimos, earum aperiam pariatur est.</p>
-                    </div>
-                </div>
-            </div>
-      </div>
-      <div class="container">
-        <div class="inner-container">
-            <div class="row">
-                <div class="col-lg-4 col-md-12 col-sm-12 sm-12 mt-4">
-                    <div>
-                        <h3>Why Choose Us?</h3>
-                    </div>
-                    <p class="mt-4">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum officiis itaque, fuga, esse illo recusandae nulla at cum quaerat optio dignissimos, delectus voluptatum? Iusto eveniet aliquid ipsa totam ut optio perspiciatis atque, dicta porro aliquam possimus similique assumenda earum ex nam. Libero aut, molestiae aperiam officiis recusandae vitae. Provident, facere.
-                    </p>
-                </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 sm-12 mt-4">
-                    <div class="mb-4">
-                        <h3>Our Expertise</h3>
-                    </div>
-                    <p class="m-0">Web Development</p>
-                    <div class="skill-container mb-3">
-                      <div id="skill-1">60</div>
-                    </div>
-                    <p class="m-0">Designing</p>
-                    <div class="skill-container mb-3">
-                      <div id="skill-2">70%</div>
-                    </div>
-                    <p class="m-0">User Experience</p>
-                    <div class="skill-container mb-3">
-                      <div id="skill-3">80%</div>
-                    </div>
-                    <p class="m-0">Development</p>
-                    <div class="skill-container mb-3">
-                      <div id="skill-4">70%</div>
-                    </div>
-
-                </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 sm-12 mt-4" id="news">
-                    <div>
-                        <h3>Our Solution</h3>
-                    </div>
-                    <div class="accordion accordion-flush" id="accordionFlush">
-                        <div class="accordion-item">
-                          <h2 class="accordion-header" id="flush-headingOne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                              Solution Heading 1
-                            </button>
-                          </h2>
-                          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlush">
-                            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, quidem.</div>
-                          </div>
-                        </div>
-                        <div class="accordion-item">
-                          <h2 class="accordion-header" id="flush-headingTwo">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                                Solution Heading 2
-                            </button>
-                          </h2>
-                          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlush">
-                            <div class="accordion-body">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, fugit.</div>
-                          </div>
-                        </div>
-                        <div class="accordion-item">
-                          <h2 class="accordion-header" id="flush-headingThree">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                                Solution Heading 3
-                            </button>
-                          </h2>
-                          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlush">
-                            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, incidunt.
-                            </div>
-                     </div>
-                     <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingFour">
-                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-                              Solution Heading 4
-                          </button>
-                        </h2>
-                        <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlush">
-                          <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, incidunt.
-                          </div>
-                      </div>
+  <section class="bg-warning">
+    <div class="banner-container d-flex justify-content-center align-items-center py-5">
+      <div class="inner-banner-contanier  d-flex justify-content-center align-items-center"></div>
+          <div class="row d-flex justify-content-center align-items-center col-9">
+              <div class="col-lg-6 col-md-12 col-sm-12 col-12 d-flex justify-content-center align-items-center">
+                  <div class="image-contanier d-flex justify-content-start align-items-center">
+                      <img src="./assets/man-image.png">
+                  </div>                
+              </div>
+              <div class="col-lg-6 col-md-12 col-sm-12 col-12 my-md-4 my-sm-4 my-4 d-flex justify-content-center align-items-center">
+                  <div>
+                      <h4>Lorem ipsum dolor sit amet.</h4>
+                      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id quo temporibus recusandae inventore possimus nesciunt aut nihil excepturi natus earum facilis unde, saepe accusamus hic cupiditate quas, maiores nemo debitis porro quis sequi suscipit harum expedita. Nulla sequi voluptatem nostrum doloremque eum consequuntur harum praesentium dignissimos, earum aperiam pariatur est.</p>
                   </div>
               </div>
+          </div>
+    </div>
+    <div class="container">
+      <div class="inner-container py-5 px-5">
+          <div class="row border border-2 border-secondary rounded pb-3">
+              <div class="col-lg-4 col-md-12 col-sm-12 sm-12 mt-4">
+                  <div>
+                      <h3>Why Choose Us?</h3>
+                  </div>
+                  <p class="mt-4">
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum officiis itaque, fuga, esse illo recusandae nulla at cum quaerat optio dignissimos, delectus voluptatum? Iusto eveniet aliquid ipsa totam ut optio perspiciatis atque, dicta porro aliquam possimus similique assumenda earum ex nam. Libero aut, molestiae aperiam officiis recusandae vitae. Provident, facere.
+                  </p>
+              </div>
+              <div class="col-lg-4 col-md-12 col-sm-12 sm-12 mt-4">
+                  <div class="mb-4">
+                      <h3>Our Expertise</h3>
+                  </div>
+                  <p class="m-0">Web Development</p>
+                  <div class="skill-container mb-3">
+                    <div id="skill-1">60</div>
+                  </div>
+                  <p class="m-0">Designing</p>
+                  <div class="skill-container mb-3">
+                    <div id="skill-2">70%</div>
+                  </div>
+                  <p class="m-0">User Experience</p>
+                  <div class="skill-container mb-3">
+                    <div id="skill-3">80%</div>
+                  </div>
+                  <p class="m-0">Development</p>
+                  <div class="skill-container mb-3">
+                    <div id="skill-4">70%</div>
+                  </div>
+
+              </div>
+              <div class="col-lg-4 col-md-12 col-sm-12 sm-12 mt-4" id="news">
+                  <div>
+                      <h3>Our Solution</h3>
+                  </div>
+                  <div class="accordion accordion-flush" id="accordionFlush">
+                      <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                          <button class="accordion-button collapsed bg-body-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse" aria-expanded="false" aria-controls="flush-collapse">
+                            Solution Heading 1
+                          </button>
+                        </h2>
+                        <div id="flush-collapse" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlush">
+                          <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, quidem.</div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingTwo">
+                          <button class="accordion-button collapsed bg-body-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                              Solution Heading 2
+                          </button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlush">
+                          <div class="accordion-body">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, fugit.</div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingThree">
+                          <button class="accordion-button collapsed bg-body-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                              Solution Heading 3
+                          </button>
+                        </h2>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlush">
+                          <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, incidunt.
+                          </div>
+                   </div>
+                   <div class="accordion-item">
+                      <h2 class="accordion-header" id="flush-headingFour">
+                        <button class="accordion-button collapsed bg-body-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                            Solution Heading 4
+                        </button>
+                      </h2>
+                      <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlush">
+                        <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, incidunt.
+                        </div>
+                    </div>
+                </div>
             </div>
-         </div>
-      </div>
+          </div>
+       </div>
     </div>
   </div>
-  <section class="py-4" id="our-team">
+</div>
+  </section>
+  <section class="py-4 bg-body-secondary">
     <div class="px-4 d-flex justify-content-center align-items-center flex-start">
       <div class="team-inner-container col-8">
         <div>
@@ -253,7 +255,7 @@
               </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-12 col-12 px-4 d-flex justify-content-center align-items-center flex-column">
-            <img src="./assets/profile.png"  id="team-pic">
+            <img src="./assets/pic1.jpg"  id="team-pic">
             <div class="d-flex justify-content-center align-items-center flex-column py-4">
               <h5 class="fw-bolder">Carlo Albis</h5>
               <p>Programmer</p>
