--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       </div>
     </div>
   </section>
-  <section class="service-container d-flex justify-content-center align-items-center flex-column w=100" id="service-container">
+  <section class="service-container d-flex justify-content-center align-items-center flex-column w=100 bg-primary-subtle" id="service-container">
     <div class="d-flex justify-content-center align-items-center flex-column pt-5">
       <h3>OUR SERVICES</h3>
       <div class="my-lg-2 my-md-2 my-sm-2 my-2 mx-lg-4 mx-md-4 mx-sm-4 mx-4">
@@ -255,7 +255,7 @@
       </div>
     </div>
   </section>
-  <section class="section-title text-center pt-5 my-3">
+  <section class="section-title text-center pt-5 bg-warning">
     <h3>
       OUR ORGANIZATION
     </h3>
@@ -328,13 +328,13 @@
           </div>
         <div>
         </div>
-          <a href="#" class="btn btn-info btn-outline-dark text-light" id="team-button">Our Portfolio</a>
+          <a href="portfolio.html" class="btn btn-info btn-outline-dark text-light" id="team-button">Our Portfolio</a>
         </div>
       </div>
     </div>
   </section> 
-  <section>
-    <div class="closing-main-container d-flex justify-content-center align-items-start m-4">
+  <section class="bg-warning-subtle">
+    <div class="closing-main-container d-flex justify-content-center align-items-start py-5">
       <div class="row d-flex justify-content-center align-items-start col-10">
         <div class="col-lg-4 col-md-12 col-sm-12 col-12">
           <h2>
