--- a/services.html
+++ b/services.html
@@ -60,13 +60,13 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a href="./services.html" class="nav-link" aria-current="page">SERVICES</a>
+                <a href="./services.html" class="nav-link active" aria-current="page">SERVICES</a>
               </li>
               <li class="nav-item">
                 <a href="#" class="nav-link" aria-current="page">PORTFOLIO</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link active" aria-current="page">PRICING</a>
+                <a href="#" class="nav-link" aria-current="page">PRICING</a>
               </li>
               <li class="nav-item">
                 <a href="contact.html" class="nav-link" aria-current="page">CONTACT</a>
@@ -104,13 +104,13 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a href="./services.html" class="nav-link" aria-current="page">SERVICES</a>
+                    <a href="./services.html" class="nav-link active" aria-current="page">SERVICES</a>
                   </li>
                   <li class="nav-item">
                     <a href="portfolio.html" class="nav-link" aria-current="page">PORTFOLIO</a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link active" aria-current="page">PRICING</a>
+                    <a href="#" class="nav-link" aria-current="page">PRICING</a>
                   </li>
                   <li class="nav-item">
                     <a href="contact.html" class="nav-link" aria-current="page">CONTACT</a>
@@ -135,76 +135,79 @@
                 </div>
             </div>
         </div>
-        <div class="container web-design-services py-5">
+       <section class="bg-warning">
+        <div class="container web-design-services bg-warning py-5">
           <div class="row">
             <div class="col-md-8">
-              <h2 class="text-primary mb-4">Web Design Services</h2>
-              <p class="lead mb-4">We specialize in creating clean and modern websites that are easy to use and visually appealing. Our team of expert designers will work with you to create a custom website that meets your unique needs.</p>
-              <ul class="list-unstyled mb-4">
+              <h2 class="text-primary mb-4 text-dark">Web Design Services</h2>
+              <p class="lead mb-4" id="hservice">We specialize in creating clean and modern websites that are easy to use and visually appealing. Our team of expert designers will work with you to create a custom website that meets your unique needs.</p>
+              <ul class="list-unstyled mb-4" id="hservice">
                 <li><i class="fas fa-check text-success mr-2"></i> Responsive Web Design</li>
                 <li><i class="fas fa-check text-success mr-2"></i> Website Redesign</li>
                 <li><i class="fas fa-check text-success mr-2"></i> E-Commerce Websites</li>
                 <li><i class="fas fa-check text-success mr-2"></i> Custom WordPress Themes</li>
               </ul>
-              <a href="#" class="btn btn-primary">Contact Us</a>
+              <a href="contact.html" class="btn btn-info fw-bolder">Contact Us</a>
             </div>
             <div class="col-md-4 py-5">
               <img src="./assets/services.bk.jpg" alt="Web Design Services" class="img-fluid rounded">
             </div>
           </div>
-        </div>
-        <div class="container py-5">
-          <div class="row">
-            <div class="col-lg-4 col-md-6 mb-4">
-              <div class="card h-100">
-                <div class="card-body">
-                  <h4 class="card-title">Web Design</h4>
-                  <p class="card-text">We specialize in designing beautiful and user-friendly websites that are tailored to meet your business needs.</p>
+       </section>
+        <section class="bg-body-secondary">
+          <div class="container py-5">
+            <div class="row">
+              <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                  <div class="card-body">
+                    <h4 class="card-title">Web Design</h4>
+                    <p class="card-text">We specialize in designing beautiful and user-friendly websites that are tailored to meet your business needs.</p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-              <div class="card h-100">
-                <div class="card-body">
-                  <h4 class="card-title">Web Development</h4>
-                  <p class="card-text">Our expert developers can create custom solutions to make your website more efficient and effective.</p>
+              <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                  <div class="card-body">
+                    <h4 class="card-title">Web Development</h4>
+                    <p class="card-text">Our expert developers can create custom solutions to make your website more efficient and effective.</p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-              <div class="card h-100">
-                <div class="card-body">
-                  <h4 class="card-title">SEO Optimization</h4>
-                  <p class="card-text">We can help improve your website's search engine rankings, so that potential customers can easily find you.</p>
+              <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                  <div class="card-body">
+                    <h4 class="card-title">SEO Optimization</h4>
+                    <p class="card-text">We can help improve your website's search engine rankings, so that potential customers can easily find you.</p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-              <div class="card h-100">
-                <div class="card-body">
-                  <h4 class="card-title">E-commerce Solutions</h4>
-                  <p class="card-text">We can create an online store for your business that is easy to use and navigate, and that helps increase sales.</p>
+              <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                  <div class="card-body">
+                    <h4 class="card-title">E-commerce Solutions</h4>
+                    <p class="card-text">We can create an online store for your business that is easy to use and navigate, and that helps increase sales.</p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-              <div class="card h-100">
-                <div class="card-body">
-                  <h4 class="card-title">Content Creation</h4>
-                  <p class="card-text">Our content creators can help you develop high-quality content that engages your audience and drives traffic to your website.</p>
+              <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                  <div class="card-body">
+                    <h4 class="card-title">Content Creation</h4>
+                    <p class="card-text">Our content creators can help you develop high-quality content that engages your audience and drives traffic to your website.</p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-              <div class="card h-100">
-                <div class="card-body">
-                  <h4 class="card-title">Social Media Management</h4>
-                  <p class="card-text">We can help you create and manage your social media accounts to help build your brand and reach your target audience.</p>
+              <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                  <div class="card-body">
+                    <h4 class="card-title">Social Media Management</h4>
+                    <p class="card-text">We can help you create and manage your social media accounts to help build your brand and reach your target audience.</p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
+        </section>
         <footer class="main-footer-container d-flex justify-content-center align-items-center">
           <div class="footer-container col-9 d-flex justify-content-center align-items-center flex-column my-4">
             <div class="row">
