--- a/contact.html
+++ b/contact.html
@@ -134,7 +134,8 @@
                 </div>
             </div>
           </div>
-          <div class="container contact-form">
+         <section class="container-contacts bg-info-subtle">
+          <div class="container h-100 contact-form bg-warning">
             <div class="contact-image">
                 <img src="./assets/rocket.png">
             </div>
@@ -162,7 +163,8 @@
                     </div>
                 </div>
             </form>
-    </div>
+           </div>
+         </section>
     <footer class="main-footer-container d-flex justify-content-center align-items-center">
         <div class="footer-container col-9 d-flex justify-content-center align-items-center flex-column my-4">
           <div class="row">
