--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@
             </div>
           </div>
          <section class="container-contacts bg-info-subtle">
-          <div class="container h-100 contact-form bg-warning">
+          <div class="container contact-form bg-warning">
             <div class="contact-image">
                 <img src="./assets/rocket.png">
             </div>
