--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
             </div>
         </div>
       </div>
-  <section class="bg-warning">
+  <section class="bg-body-secondary">
     <div class="banner-container d-flex justify-content-center align-items-center py-5">
       <div class="inner-banner-contanier  d-flex justify-content-center align-items-center"></div>
           <div class="row d-flex justify-content-center align-items-center col-9">
