--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                 <a href="#" class="dropdown-item">OUR TEAM</a>
               </li>
               <li>
-                <a href="#" class="dropdown-item">NEWS</a>
+                <a href="#news" class="dropdown-item">NEWS</a>
               </li>
               <li>
                 <a href="#" class="dropdown-item">INVESTORS</a>
@@ -58,7 +58,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a href="./services.html" class="nav-link" aria-current="page">SERVICES</a>
+            <a href="services.html" class="nav-link" aria-current="page">SERVICES</a>
           </li>
           <li class="nav-item">
             <a href="portfolio.html" class="nav-link" aria-current="page">PORTFOLIO</a>
@@ -91,10 +91,10 @@
                     <a href="about.html" class="dropdown-item">COMPANY</a>
                   </li>
                   <li>
-                    <a href="#our-team" class="dropdown-item">OUR TEAM</a>
+                    <a href="#" class="dropdown-item">OUR TEAM</a>
                   </li>
                   <li>
-                    <a href="#" class="dropdown-item">NEWS</a>
+                    <a href="#news" class="dropdown-item">NEWS</a>
                   </li>
                   <li>
                     <a href="#" class="dropdown-item">INVESTORS</a>
@@ -102,7 +102,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a href="./services.html" class="nav-link" aria-current="page">SERVICES</a>
+                <a href="services.html" class="nav-link" aria-current="page">SERVICES</a>
               </li>
               <li class="nav-item">
                 <a href="portfolio.html" class="nav-link" aria-current="page">PORTFOLIO</a>
