--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a href="./services.html" class="nav-link" aria-current="page">SERVICES</a>
+                <a href="services.html" class="nav-link" aria-current="page">SERVICES</a>
               </li>
               <li class="nav-item">
                 <a href="portfolio.html" class="nav-link" aria-current="page">PORTFOLIO</a>
@@ -95,7 +95,7 @@
                         <a href="#" class="dropdown-item">OUR TEAM</a>
                       </li>
                       <li>
-                        <a href="#" class="dropdown-item">NEWS</a>
+                        <a href="#news" class="dropdown-item">NEWS</a>
                       </li>
                       <li>
                         <a href="#" class="dropdown-item">INVESTORS</a>
@@ -103,7 +103,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a href="./services.html" class="nav-link" aria-current="page">SERVICES</a>
+                    <a href="services.html" class="nav-link" aria-current="page">SERVICES</a>
                   </li>
                   <li class="nav-item">
                     <a href="portfolio.html" class="nav-link" aria-current="page">PORTFOLIO</a>
