--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
                     <a href="#" class="dropdown-item">OUR TEAM</a>
                   </li>
                   <li>
-                    <a href="#" class="dropdown-item">NEWS</a>
+                    <a href="#news" class="dropdown-item">NEWS</a>
                   </li>
                   <li>
                     <a href="#" class="dropdown-item">INVESTORS</a>
@@ -58,10 +58,10 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a href="./services.html" class="nav-link" aria-current="page">SERVICES</a>
+                <a href="services.html" class="nav-link" aria-current="page">SERVICES</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link active" aria-current="page">PORTFOLIO</a>
+                <a href="portfolio.html" class="nav-link active" aria-current="page">PORTFOLIO</a>
               </li>
               <li class="nav-item">
                 <a href="pricing.html" class="nav-link" aria-current="page">PRICING</a>
@@ -94,7 +94,7 @@
                         <a href="#" class="dropdown-item">OUR TEAM</a>
                       </li>
                       <li>
-                        <a href="#" class="dropdown-item">NEWS</a>
+                        <a href="#news" class="dropdown-item">NEWS</a>
                       </li>
                       <li>
                         <a href="#" class="dropdown-item">INVESTORS</a>
@@ -102,7 +102,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a href="./services.html" class="nav-link" aria-current="page">SERVICES</a>
+                    <a href="services.html" class="nav-link" aria-current="page">SERVICES</a>
                   </li>
                   <li class="nav-item">
                     <a href="portfolio.html" class="nav-link active" aria-current="page">PORTFOLIO</a>
