--- a/pricing.html
+++ b/pricing.html
@@ -51,7 +51,7 @@
                     <a href="#" class="dropdown-item">OUR TEAM</a>
                   </li>
                   <li>
-                    <a href="#" class="dropdown-item">NEWS</a>
+                    <a href="#news" class="dropdown-item">NEWS</a>
                   </li>
                   <li>
                     <a href="#" class="dropdown-item">INVESTORS</a>
@@ -59,13 +59,13 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a href="./services.html" class="nav-link" aria-current="page">SERVICES</a>
+                <a href="services.html" class="nav-link" aria-current="page">SERVICES</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link" aria-current="page">PORTFOLIO</a>
+                <a href="portfolio.html" class="nav-link" aria-current="page">PORTFOLIO</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link active" aria-current="page">PRICING</a>
+                <a href="pricing.html" class="nav-link active" aria-current="page">PRICING</a>
               </li>
               <li class="nav-item">
                 <a href="contact.html" class="nav-link" aria-current="page">CONTACT</a>
@@ -103,13 +103,13 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a href="./services.html" class="nav-link" aria-current="page">SERVICES</a>
+                    <a href="services.html" class="nav-link" aria-current="page">SERVICES</a>
                   </li>
                   <li class="nav-item">
                     <a href="portfolio.html" class="nav-link" aria-current="page">PORTFOLIO</a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link active" aria-current="page">PRICING</a>
+                    <a href="pricing.html" class="nav-link active" aria-current="page">PRICING</a>
                   </li>
                   <li class="nav-item">
                     <a href="contact.html" class="nav-link" aria-current="page">CONTACT</a>
