--- a/services.html
+++ b/services.html
@@ -52,7 +52,7 @@
                     <a href="#" class="dropdown-item">OUR TEAM</a>
                   </li>
                   <li>
-                    <a href="#" class="dropdown-item">NEWS</a>
+                    <a href="#news" class="dropdown-item">NEWS</a>
                   </li>
                   <li>
                     <a href="#" class="dropdown-item">INVESTORS</a>
@@ -60,13 +60,13 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a href="./services.html" class="nav-link active" aria-current="page">SERVICES</a>
+                <a href="services.html" class="nav-link active" aria-current="page">SERVICES</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link" aria-current="page">PORTFOLIO</a>
+                <a href="portfolio.html" class="nav-link" aria-current="page">PORTFOLIO</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link" aria-current="page">PRICING</a>
+                <a href="pricing.html" class="nav-link" aria-current="page">PRICING</a>
               </li>
               <li class="nav-item">
                 <a href="contact.html" class="nav-link" aria-current="page">CONTACT</a>
@@ -96,7 +96,7 @@
                         <a href="#" class="dropdown-item">OUR TEAM</a>
                       </li>
                       <li>
-                        <a href="#" class="dropdown-item">NEWS</a>
+                        <a href="#news" class="dropdown-item">NEWS</a>
                       </li>
                       <li>
                         <a href="#" class="dropdown-item">INVESTORS</a>
@@ -104,13 +104,13 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a href="./services.html" class="nav-link active" aria-current="page">SERVICES</a>
+                    <a href="services.html" class="nav-link active" aria-current="page">SERVICES</a>
                   </li>
                   <li class="nav-item">
                     <a href="portfolio.html" class="nav-link" aria-current="page">PORTFOLIO</a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link" aria-current="page">PRICING</a>
+                    <a href="pricing.html" class="nav-link" aria-current="page">PRICING</a>
                   </li>
                   <li class="nav-item">
                     <a href="contact.html" class="nav-link" aria-current="page">CONTACT</a>
